--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   margin-bottom: 40px;
 }
 
